<resources>
    <string name="app_name">PlantPest</string>
    <string name="title_home">Home</string>
    <string name="title_capture">Capture</string>
    <string name="title_account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_picture_preview">Picture Preview</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_setting">About Us</string>
    <string name="txt_analyze">Analyze</string>
    <string name="txt_pest_name">Pest Name</string>
    <string name="txt_percentage">85%</string>
    <string name="arrow">arrow</string>
    <string name="txt_photo_result">photo_result</string>
    <string name="icon_app">icon app</string>
    <string name="bt_gallery">Gallery</string>
    <string name="logo">Logo</string>
    <string name="pest_solution">Pest Solution</string>
    <string name="pest_on">Pest on</string>
    <string name="detection_result">Detection Result</string>
    <string name="icon_result">Icon Result</string>
    <string name="name_pest">Name Pest</string>
    <string name="icon_solution">Icon Solution</string>
    <string name="solution">Solution</string>
    <string name="image_result">Image result</string>
    <string name="temperature">0</string>
    <string name="txt_temp">°C</string>
    <string name="img_weather">Image Weather</string>
    <string name="location"> </string>
    <string name="txt_air_quality">Air Quality:</string>
    <string name="air_quality"> </string>
    <string name="txt_humidity">Humidity</string>
    <string name="humidity">0%</string>
    <string name="weather_type">Weather Type</string>
    <string name="title_article">Title Article</string>
    <string name="date_article">Date Article</string>
    <string name="you_must_know">You Must Know!</string>
    <string name="image_article">image article</string>
    <string name="icon_loc">icon loc</string>
</resources>