<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:id="@+id/itemWeather"
    android:layout_margin="5dp"
    android:paddingStart="30dp"
    android:background="@drawable/bg_green"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingTop="30dp"
        android:text="@string/temperature"
        android:textColor="#FFC107"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_temp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/location"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        android:contentDescription="@string/icon_loc" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <ImageView
        android:id="@+id/img_weather"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/img_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_type"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#BE9DA19F"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/txt_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_humidity"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/txt_airQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_air_quality"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_humidity" />

    <TextView
        android:id="@+id/airQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_quality"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

</androidx.constraintlayout.widget.ConstraintLayout>